feat(lang): Localyzer Translation kit 5: ar_BH

--- a/f_ar_BH.properties
+++ b/f_ar_BH.properties
@@ -6,10 +6,13 @@ test=First line\r\nSecond line\nThird line\rFourth line
 test2=café ( café ) 👋 😊
 currency=$1,234.56 €1.234,57 ¥1,234 1,234.56e-7
 ttt="He said 'this is a test' and "that too""
+#LRM_RESEND Resend request from String Manager 17491153349180
 user.confirm.delete=Are you sure you want to delete {0}?\\n\\nTHERE IS NO UNDO for deleting Users.
+#LRM_RESEND Resend request from String Manager 17491153349202
 user.editor.save.error=<strong>The User could not be saved.</strong><br/>\
 Please correct the errors identified below and click one of the "Save" buttons.<br/>
 #
 # bind and validation errors
 #
+#LRM_RESEND Resend request from String Manager 17491153349201
 User.invalidValueError.name=User Name must be a valid email address.
