feat(lang): Localyzer Translation kit 17: cs_CZ

--- a/f_cs_CZ.properties
+++ b/f_cs_CZ.properties
@@ -2,9 +2,12 @@ tttwww=&quot &quot; `~ёЁ !@#$%!"№;%%:?*()%^&*()
 byTheFollowingAdministrator= Name: John Smith, Jr., Age: 30, City: New York, N.Y.: {0}
 artifactChangeNotification.Ownership="Hello again "World"", 'It''s a test', < > & | jj
 firstLastName={0} {1}
+#LRM_RESEND Resend request from String Manager 17491188547872
 test=First line\r\nSecond line\nThird line\rFourth line
+#LRM_RESEND Resend request from String Manager 17491188547882
 test2=café ( café ) 👋 😊
 currency=$1,234.56 €1.234,57 ¥1,234 1,234.56e-7
+#LRM_RESEND Resend request from String Manager 17491188547884
 ttt="He said 'this is a test' and "that too""
 user.confirm.delete=Are you sure you want to delete {0}?\\n\\nTHERE IS NO UNDO for deleting Users.
 user.editor.save.error=<strong>The User could not be saved.</strong><br/>\
