feat(lang): Localyzer Translation kit 20: bn_BD

--- a/f_bn_BD.properties
+++ b/f_bn_BD.properties
@@ -2,14 +2,20 @@ tttwww=&quot &quot; `~ёЁ !@#$%!"№;%%:?*()%^&*()
 byTheFollowingAdministrator= Name: John Smith, Jr., Age: 30, City: New York, N.Y.: {0}
 artifactChangeNotification.Ownership="Hello again "World"", 'It''s a test', < > & | jj
 firstLastName={0} {1}
+#LRM_RESEND Resend request from String Manager 17491188547963
 test=First line\r\nSecond line\nThird line\rFourth line
+#LRM_RESEND Resend request from String Manager 17491188547961
 test2=café ( café ) 👋 😊
 currency=$1,234.56 €1.234,57 ¥1,234 1,234.56e-7
+#LRM_RESEND Resend request from String Manager 17491188547964
 ttt="He said 'this is a test' and "that too""
+#LRM_RESEND Resend request from String Manager 17491190496624
 user.confirm.delete=Are you sure you want to delete {0}?\\n\\nTHERE IS NO UNDO for deleting Users.
+#LRM_RESEND Resend request from String Manager 17491190496623
 user.editor.save.error=<strong>The User could not be saved.</strong><br/>\
 Please correct the errors identified below and click one of the "Save" buttons.<br/>
 #
 # bind and validation errors
 #
+#LRM_RESEND Resend request from String Manager 17491190496622
 User.invalidValueError.name=User Name must be a valid email address.
