feat(lang): Localyzer Translation kit 28: ar_BH

--- a/f_ar_BH.properties
+++ b/f_ar_BH.properties
@@ -1,11 +1,13 @@
 tttwww=&quot &quot; `~ёЁ !@#$%!"№;%%:?*()%^&*()
+#LRM_RESEND Resend request from String Manager 17491223145171
 byTheFollowingAdministrator= Name: John Smith, Jr., Age: 30, City: New York, N.Y.: {0}
+#LRM_RESEND Resend request from String Manager 17491223145184
 artifactChangeNotification.Ownership="Hello again "World"", 'It''s a test', < > & | jj
 firstLastName={0} {1}
-test=First line\r\nSecond line\nThird line\rFourth line
+test=First line\r\nSecond line\nThird line\rFourth line 222
 test2=café ( café ) 👋 😊
 currency=$1,234.56 €1.234,57 ¥1,234 1,234.56e-7
-ttt="He said 'this is a test' and "that too""
+ttt="He said 'this is a test' and "that too"" 7878
 user.confirm.delete=Are you sure you want to delete {0}?\\n\\nTHERE IS NO UNDO for deleting Users.
 user.editor.save.error=<strong>The User could not be saved.</strong><br/>\
 Please correct the errors identified below and click one of the "Save" buttons.<br/>
