--- a/f_cs_CZ.properties
+++ b/f_cs_CZ.properties
@@ -9,3 +9,7 @@ ttt="He said 'this is a test' and "that too"" 7878
 user.confirm.delete=Are you sure you want to delete {0}?\\n\\nTHERE IS NO UNDO for deleting Users.
 user.editor.save.error=<strong>The User could not be saved.</strong><br/>\
 Please correct the errors identified below and click one of the "Save" buttons.<br/>
+#
+# bind and validation errors
+#
+User.invalidValueError.name=User Name must be a valid email address.
