--- a/f_cs_CZ.properties
+++ b/f_cs_CZ.properties
@@ -3,9 +3,9 @@ byTheFollowingAdministrator= Name: John Smith, Jr., Age: 30, City: New York, N.Y
 artifactChangeNotification.Ownership="Hello again "World"", 'It''s a test', < > & | jj
 firstLastName={0} {1}
 test=First line\r\nSecond line\nThird line\rFourth line 222
-test2=café ( café ) 👋 😊
+test2=café ( café ) 👋 😊 jijiji
 currency=$1,234.56 €1.234,57 ¥1,234 1,234.56e-7
-ttt="He said 'this is a test' and "that too"" 7878
+ttt="He said 'this is a test' and "that too"" 787800
 user.confirm.delete=Are you sure you want to delete {0}?\\n\\nTHERE IS NO UNDO for deleting Users.
 user.editor.save.error=<strong>The User could not be saved.</strong><br/>\
 Please correct the errors identified below and click one of the "Save" buttons.<br/>
